# mir2x

./: CMakeLists.txt  README.md
client/src/: acbutton.cpp  buttonbase.cpp  buttonbase.hpp  checkbox.cpp  checkbox.hpp  checklabel.cpp  checklabel.hpp  client.cpp  client.hpp  clientargparser.hpp  clientnpc.cpp  controlboard.cpp  controlboard.hpp  friendchatboard.cpp  friendchatboard.hpp  friendchatboard_chatinputcontainer.cpp  friendchatboard_chatitem.cpp  friendchatboard_chatitemcontainer.cpp  friendchatboard_chatpreviewitem.cpp  friendchatboard_chatpreviewpage.cpp  friendchatboard_frienditem.cpp  friendchatboard_friendlistpage.cpp  friendchatboard_searchautocompletionitem.cpp  friendchatboard_searchinputline.cpp  friendchatboard_searchpage.cpp  gfxcropboard.hpp  gfxcropdupboard.hpp  gfxdupboard.hpp  guildboard.cpp  guildboard.hpp  guimanager.cpp  guimanager.hpp  hero.cpp  hero.hpp  imageboard.cpp  imageboard.hpp  imagecropboard.hpp  imagecropdupboard.hpp  imeboard.cpp  inputline.cpp  (+66 more)
common/src/: actionnode.hpp  clientmsg.hpp  conceptf.hpp  fflerror.hpp  fixedbuf.hpp  luaf.hpp  luamodule.cpp  mathf.hpp  msgf.hpp  protocoldef.hpp  raiitimer.cpp  sdruntimeconfig.hpp  serdesmsg.hpp  servermsg.hpp  staticvector.hpp  strf.hpp  sysconst.hpp  totype.hpp  uidf.cpp  uidf.hpp  zcompf.cpp  zcompf.hpp
server/src/: actormsg.hpp  battleobject.cpp  battleobject.hpp  channel.cpp  channel.hpp  charobject.cpp  charobject.hpp  charobject.lua  commandinput.cpp  commandluamodule.cpp  commandluamodule.hpp  (+33 more)
tools/: CMakeLists.txt
tools/wtldecoder_newversion/src/: CMakeLists.txt  main.cpp
(+18 files in other folders)
