AUX_SOURCE_DIRECTORY(. WTLDECODER_NEWVERSION_SRC)
ADD_EXECUTABLE(wtldecoder_newversion ${WTLDECODER_NEWVERSION_SRC})
ADD_DEPENDENCIES(wtldecoder_newversion mir2x_3rds)

TARGET_INCLUDE_DIRECTORIES(wtldecoder_newversion PRIVATE ${MIR2X_COMMON_SOURCE_DIR} )
TARGET_INCLUDE_DIRECTORIES(wtldecoder_newversion PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(wtldecoder_newversion PRIVATE ${CMAKE_CURRENT_LIST_DIR}  )

TARGET_LINK_LIBRARIES(wtldecoder_newversion ${CMAKE_DL_LIBS})
TARGET_LINK_LIBRARIES(wtldecoder_newversion common          )
TARGET_LINK_LIBRARIES(wtldecoder_newversion ${PNG_LIBRARIES}        )
